<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context="com.example.android.programminglanguageselection.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/welcomePctr"
            android:layout_width="@dimen/value_decided_by_constrain"
            android:layout_height="@dimen/welcome_img_height"
            android:contentDescription="@string/welcoming_img"
            android:scaleType="centerCrop"
            android:src="@drawable/flat_programmer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flat_programmer" />

        <TextView
            android:id="@+id/testDescription"
            android:layout_width="@dimen/value_decided_by_constrain"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginTop="@dimen/welcome_img_height"
            android:padding="@dimen/welcome_text_padding"
            android:text="@string/test_description"
            android:textSize="@dimen/default_font_size"
            app:layout_constraintBottom_toTopOf="@+id/name_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/name_entry_form"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/protection_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testDescription" />

        <EditText
            android:id="@+id/protection_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/protection_entry_form_hint_question"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/beginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/protection_question" />

        <Button
            android:id="@+id/beginButton"
            android:layout_width="@dimen/value_decided_by_constrain"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorButton"
            android:onClick="nextQuestion"
            android:text="@string/begin_test_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/protection_input" />

        <TextView
            android:id="@+id/protection_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/protection_entry_form"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/protection_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>