<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/question"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/value_decided_by_constrain"
        android:layout_height="@dimen/questions_count_height"
        android:layout_margin="@dimen/questions_count_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/questionCount"
        app:layout_constraintEnd_toStartOf="@+id/questionCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/questionCount" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/value_decided_by_constrain"
        android:layout_height="@dimen/questions_count_height"
        android:layout_margin="@dimen/questions_count_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/questionCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/questionCount"
        app:layout_constraintTop_toTopOf="@+id/questionCount" />

    <TextView
        android:id="@+id/questionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/question_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="@dimen/value_decided_by_constrain"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/question_1"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionCount" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/value_decided_by_constrain"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTitle">

        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_higher"
            android:onClick="nextQuestion"
            android:text="@string/q_1_answer_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_higher"
            android:onClick="nextQuestion"
            android:text="@string/q_1_answer_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer1" />

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_higher"
            android:onClick="nextQuestion"
            android:text="@string/q_1_answer_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer2" />

        <RadioButton
            android:id="@+id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_higher"
            android:onClick="nextQuestion"
            android:text="@string/q_1_answer_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer3" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>